--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -12,7 +12,7 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 3 Jun 2006
+  Last Modified: 20 Jun 2006
   Number: 12
   Version: 16
 
@@ -403,8 +403,9 @@ internal storage location via C<$!foo> should generally be restricted
 to submethods.  Ordinary methods should stick to the C<$.foo> form.
 
 Because C<$.foo>, C<@.foo>, C<%.foo>, C<&.foo> are just shorthands of
-C<self.foo> with different contexts, the class does not need to declare C<has
-$.foo> as a property -- a C<method foo> declaration can work just as well.
+C<self.foo> with different contexts, the class does not need to declare
+C<has $.foo> as an attribute -- a C<method foo> declaration can work
+just as well.
 
 The dot form can take an argument list as well.  These are all equivalent:
 
