* S06: Correct an extra comma in the comment:     for @foo, sub { ... }   should be written as     for @foo sub { ... }   if the sub is to be taken as the loop body.
git-svn-id: http://svn.pugscode.org/pugs@23461 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -142,7 +142,7 @@ bare block.
 
     $sq = -> $val { $val**2 };  # Same as: $sq = sub ($val) { $val**2 };
 
-    for @list -> $elem {        # Same as: for @list, sub ($elem) {
+    for @list -> $elem {        # Same as: for @list sub ($elem) {
         print "$elem\n";        #              print "$elem\n";
     }                           #          }
 
