* S06: anonymous methods is part of Perl 6, so we use that   instead of the Perl5esque "sub" for FETCH and STORE.
git-svn-id: http://svn.pugscode.org/pugs@23463 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -226,10 +226,10 @@ C<FETCH> and C<STORE> methods:
 
     sub checklastval ($passwd) is rw {
         return new Proxy:
-                FETCH => sub ($self) {
+                FETCH => method {
                             return lastval();
                          },
-                STORE => sub ($self, $val) {
+                STORE => method ($val) {
                             die unless check($passwd);
                             lastval() = $val;
                          };
