* Separate multi/single dispatch and method/sub completely   in the nomenclature; the "invocant" is always the object   for a method call now, and becomes totally orthogonal with   the concepts of multi and "long names".
* To reflect this change, multiple long names are now separated
  semicolons, and the invocant are separated with a colon, so
  this particular ambiguity was resolved:

    multi method foo ($x: $y) # is $x invocant or long name?

  Now it's unambiguously one of the two:

    multi method foo ($x: $y) # $x is invocant
    multi method foo ($x; $y) # $x is long name

  Thanks to TimToady++ and dconway++ for working out this issue;
  blame me for errors in ghost-writing. :-)

git-svn-id: http://svn.pugscode.org/pugs@23465 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -471,7 +471,7 @@ A method invocant may be specified as the first parameter in the parameter
 list, with a colon (rather than a comma) immediately after it:
 
     method get_name ($self:) {...}
-    method set_name ($me: $newname) {...}
+    method set_name ($_: $newname) {...}
 
 The corresponding argument (the invocant) is evaluated in scalar context
 and is passed as the left operand of the method call operator:
