--- a/doc/trunk/design/syn/S10.pod
+++ b/doc/trunk/design/syn/S10.pod
@@ -88,7 +88,7 @@ However, Perl 5's C<AUTOLOAD> is being superseded by MMD autoloaders
 that distinguish declaration from definition, but are not restricted
 to declaring subs.  A run-time declarator multisub is declared as:
 
-    multi CANDO ( MyPackage, $type, $name: *%args --> Container)
+    multi CANDO ( MyPackage, $type, $name; *%args --> Container)
 
 which stands in for the declaration of a container object within
 another container object; it is called when anyone is searching for
@@ -100,10 +100,10 @@ of object is expected in context, or this may be intuited from the
 name requested.  In any case, there may be multiple C<CANDO> routines
 that are dispatched via MMD:
 
-    multi CANDO ( MyPackage, Item, $name: *%args --> Container)
-    multi CANDO ( MyPackage, Array, $name: *%args --> Container)
-    multi CANDO ( MyPackage, Hash, $name: *%args --> Container)
-    multi CANDO ( MyPackage, Code, $name: *%args --> Container)
+    multi CANDO ( MyPackage, Item, $name; *%args --> Container)
+    multi CANDO ( MyPackage, Array, $name; *%args --> Container)
+    multi CANDO ( MyPackage, Hash, $name; *%args --> Container)
+    multi CANDO ( MyPackage, Code, $name; *%args --> Container)
 
 The package itself is just passed as the
 first argument, since it's the container object.  Subsequent arguments
@@ -129,9 +129,9 @@ of a proxy object can supply either readonly or rw semantics later.
 When the package in question is a class, it is also possible to declare 
 real methods or submethods:
 
-    multi method CANDO ($self: Code, $name: *%args --> Container)
+    multi method CANDO ($self: Code, $name; *%args --> Container)
 
-    multi submethod CANDO ($self: Item, $name: *%args --> Container)
+    multi submethod CANDO ($self: Item, $name; *%args --> Container)
 
 The method form is inherited by subclasses.  Submethods are never
 inherited but may still do MMD within the class.   (Ordinary multisubs
