* S02: kolibrie++ noticed that a heredoc without a semicolon is confusing,        so we reasserted the Perl5 semantics by a TimToady++ ruling.
git-svn-id: http://svn.pugscode.org/pugs@23468 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -1811,14 +1811,17 @@ that shows up in C<&?BLOCK.label>.
 Heredocs are no longer written with C<<< << >>>, but with an adverb on
 any other quote construct:
 
-    print qq:to/END/
+    print qq:to/END/;
         Give $amount to the man behind curtain number $curtain.
         END
 
-Other adverbs are also allowed:
+Other adverbs are also allowed, as are multiple heredocs within the same
+expression:
 
-    print q:c:to/END/
+    print q:c:to/END/, q:to/END/;
         Give $100 to the man behind curtain number {$curtain}.
+        END
+        Here is a $non-interpolated string
         END
 
 =item *
